# TCAMpy

./: .readthedocs.yaml  README.md  TCAMpy.py  TMLpy.py  dashboard_app.py  example_app.ipynb  pyproject.toml  requirements.txt
.github/workflows/: release.yml
Images/: Images.txt
Model/: Model.py  TCAMpy2D  __init.py__
docs/: API.rst  Background.rst  Examples.rst  Installation.rst  License.rst  Usage.rst  conf.py  index.rst  requirements.txt
examples/: example_dashboard.py  example_ml.py  example_model.py
test/: test_model.py
