[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TCAMpy"
version = "0.0.1"
authors = [
  { name="Rich치rd Bence R칩zsa"}
]
maintainers = [
  { name="Rich치rd Bence R칩zsa", email = "rozsaricsibence@gmail.com"}
]
description = "Cellular Automaton Model for Tumor Growth"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/FetasaLYt/TCAMpy"
Documentation = "https://tcampy.readthedocs.io/en/latest/"
Repository = "https://github.com/FetasaLYt/TCAMpy"
Issues = "https://github.com/FetasaLYt/TCAMpy/issues"
Dashboard = "https://tcampy.streamlit.app/"

[tool.setuptools]
py-modules = ["TCAMpy"]
